--- a/Books.Web/Views/Category/Create.cshtml
+++ b/Books.Web/Views/Category/Create.cshtml
@@ -10,12 +10,14 @@
         <div class="row mb-3 p-1">
             <label asp-for="Name" class="p-0">Name</label>
             <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
             <!--<input type="type" name="name" value="" />-->
         </div>
 
         <div class="row mb-3 p-1">
             <label asp-for="DisplayOrder" class="p-0">Display Order</label>
             <input asp-for="DisplayOrder" class="form-control" />
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <div class="row">
