--- a/Books.Web/Views/Category/Create.cshtml
+++ b/Books.Web/Views/Category/Create.cshtml
@@ -7,6 +7,7 @@
             <hr />
         </div>
 
+        @*<div asp-validation-summary="ModelOnly"></div>*@
         <div class="row mb-3 p-1">
             <label asp-for="Name" class="p-0">Name</label>
             <input asp-for="Name" class="form-control" />
