Created and implemted repository, controller, and view for Book model

--- a/Books.Web/Areas/Admin/Views/Category/Delete.cshtml
+++ b/Books.Web/Areas/Admin/Views/Category/Delete.cshtml
@@ -15,11 +15,11 @@
             <div class="border p-3 mt-4">
                 @*<div asp-validation-summary="ModelOnly"></div>*@
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Name" class="ms-2"></label>
+                    <label asp-for="Name" class="ms-2">Name</label>
                     <input asp-for="Name" disabled type="text" class="form-control border-0 shadow" />
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="DisplayOrder" class="ms-2"></label>
+                    <label asp-for="DisplayOrder" class="ms-2">Display Order</label>
                     <input asp-for="DisplayOrder" disabled class="form-control border-0 shadow" />
                 </div>
 
