--- a/Books.Web/Areas/Admin/Views/Book/Create.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book
+﻿@model BookVM
 
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
@@ -14,52 +14,66 @@
             <div class="border p-3">
                 @*<div asp-validation-summary="ModelOnly"></div>*@
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Title" class="ms-2">Book Title</label>
-                    <input asp-for="Title" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="Book.Title" class="ms-2">Book Title</label>
+                    <input asp-for="Book.Title" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.Title" class="text-danger"></span>
                     <!--<input type="type" name="name" value="" />-->
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Author" class="ms-2">Author</label>
-                    <input asp-for="Author" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Author" class="text-danger"></span>
+                    <label asp-for="Book.Author" class="ms-2">Author</label>
+                    <input asp-for="Book.Author" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.Author" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Description" class="ms-2">Description</label>
-                    <textarea asp-for="Description" class="form-control border-0 shadow"></textarea>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <label asp-for="Book.Description" class="ms-2">Description</label>
+                    <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
+                    <span asp-validation-for="Book.Description" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="ISBN" class="ms-2">ISBN</label>
-                    <input asp-for="ISBN" class="form-control border-0 shadow" />
-                    <span asp-validation-for="ISBN" class="text-danger"></span>
+                    <label asp-for="Book.ISBN" class="ms-2">ISBN</label>
+                    <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="ListPrice" class="ms-2">List Price</label>
-                    <input asp-for="ListPrice" class="form-control border-0 shadow" />
-                    <span asp-validation-for="ListPrice" class="text-danger"></span>
+                    <label asp-for="Book.ListPrice" class="ms-2">List Price</label>
+                    <input asp-for="Book.ListPrice" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.ListPrice" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Price" class="ms-2">Price for 1-50</label>
-                    <input asp-for="Price" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <label asp-for="Book.Price" class="ms-2">Price for 1-50</label>
+                    <input asp-for="Book.Price" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.Price" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Price50" class="ms-2">Price for 50-100</label>
-                    <input asp-for="Price50" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Price50" class="text-danger"></span>
+                    <label asp-for="Book.Price50" class="ms-2">Price for 50-100</label>
+                    <input asp-for="Book.Price50" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.Price50" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating py-2 col-12">
-                    <label asp-for="Price100" class="ms-2">Price for 100+</label>
-                    <input asp-for="Price100" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Price100" class="text-danger"></span>
+                    <label asp-for="Book.Price100" class="ms-2">Price for 100+</label>
+                    <input asp-for="Book.Price100" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.Price100" class="text-danger"></span>
+                </div>
+
+                <div class="form-floating py-2 col-12">
+                    <label asp-for="Book.CategoryId" class="ms-2"></label>
+                    <select asp-for="Book.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                        <option disabled selected>--Select category--</option>
+                    </select>
+                    <span asp-validation-for="Book.CategoryId" class="text-danger"></span>
+                </div>
+
+                <div class="form-floating py-2 col-12">
+                    <label asp-for="Book.ImageUrl" class="ms-2"></label>
+                    <input asp-for="Book.ImageUrl" class="form-control border-0 shadow" />
+                    <span asp-validation-for="Book.ImageUrl" class="text-danger"></span>
                 </div>
 
                 <div class="row pt-2">
