--- a/Books.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -15,7 +15,7 @@
             </div>
 
             <div class="col-6 text-end">
-                <a asp-controller="Book" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Book" asp-action="Upsert" class="btn btn-primary">
                     <i class="bi bi-plus-circle"></i> Create New Book
                 </a>
             </div>
@@ -43,7 +43,7 @@
                         <td></td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Book" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="Book" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
                                 <a asp-controller="Book" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
