--- a/Books.Web/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Upsert.cshtml
@@ -4,81 +4,89 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Book</h2>
+                <h2 class="text-white py-2"> @(Model.Book.Id!=0?"Update":"Create") Book</h2>
             </div>
         </div>
     </div>
 
     <div class="card-body p-4">
-        <form method="post" class="row">
+        <form method="post" class="row" enctype="multipart/form-data">
+            <!--<input asp-for="Book.Id" hidden />-->
             <div class="border p-3">
                 @*<div asp-validation-summary="ModelOnly"></div>*@
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Title" class="ms-2">Book Title</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Title" class="ms-0">Book Title</label>
                     <input asp-for="Book.Title" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.Title" class="text-danger"></span>
                     <!--<input type="type" name="name" value="" />-->
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Author" class="ms-2">Author</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Author" class="ms-0">Author</label>
                     <input asp-for="Book.Author" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.Author" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Description" class="ms-2">Description</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Description" class="ms-0">Description</label>
                     <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
                     <span asp-validation-for="Book.Description" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.ISBN" class="ms-2">ISBN</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.ISBN" class="ms-0">ISBN</label>
                     <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.ISBN" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.ListPrice" class="ms-2">List Price</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.ListPrice" class="ms-0">List Price</label>
                     <input asp-for="Book.ListPrice" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.ListPrice" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Price" class="ms-2">Price for 1-50</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Price" class="ms-0">Price for 1-50</label>
                     <input asp-for="Book.Price" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.Price" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Price50" class="ms-2">Price for 50-100</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Price50" class="ms-0">Price for 50-100</label>
                     <input asp-for="Book.Price50" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.Price50" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.Price100" class="ms-2">Price for 100+</label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.Price100" class="ms-0">Price for 100+</label>
                     <input asp-for="Book.Price100" class="form-control border-0 shadow" />
                     <span asp-validation-for="Book.Price100" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.CategoryId" class="ms-2"></label>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.CategoryId" class="ms-0"></label>
                     <select asp-for="Book.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
                         <option disabled selected>--Select category--</option>
                     </select>
                     <span asp-validation-for="Book.CategoryId" class="text-danger"></span>
                 </div>
 
-                <div class="form-floating py-2 col-12">
-                    <label asp-for="Book.ImageUrl" class="ms-2"></label>
-                    <input asp-for="Book.ImageUrl" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.ImageUrl" class="text-danger"></span>
+                <div class="form-floating py-3 col-12">
+                    <label asp-for="Book.ImageUrl" class="ms-0"></label>
+                    <input type="file" class="form-control border-0 shadow" />
                 </div>
 
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        @if (Model.Book.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+                        }
+                        
                     </div>
 
                     <div class="col-6 col-md-3">
