--- a/Books.Web/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Upsert.cshtml
@@ -11,87 +11,96 @@
 
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
-            <!--<input asp-for="Book.Id" hidden />-->
-            <div class="border p-3">
-                @*<div asp-validation-summary="ModelOnly"></div>*@
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Title" class="ms-0">Book Title</label>
-                    <input asp-for="Book.Title" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.Title" class="text-danger"></span>
-                    <!--<input type="type" name="name" value="" />-->
-                </div>
+            <input asp-for="Book.Id" hidden />
+            <input asp-for="Book.ImageUrl" hidden />
+            <div class="row">
+                <div class="col-10">
+                    <div class="border p-3">
+                        @*<div asp-validation-summary="ModelOnly"></div>*@
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.Title" class="ms-0">Book Title</label>
+                            <input asp-for="Book.Title" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.Title" class="text-danger"></span>
+                            <!--<input type="type" name="name" value="" />-->
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Author" class="ms-0">Author</label>
-                    <input asp-for="Book.Author" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.Author" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.Author" class="ms-0">Author</label>
+                            <input asp-for="Book.Author" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.Author" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Description" class="ms-0">Description</label>
-                    <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
-                    <span asp-validation-for="Book.Description" class="text-danger"></span>
-                </div>
+                        <div class="py-3 col-12">
+                            <label asp-for="Book.Description" class="ms-0 text-muted"></label>
+                            <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.ISBN" class="ms-0">ISBN</label>
-                    <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.ISBN" class="ms-0">ISBN</label>
+                            <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.ListPrice" class="ms-0">List Price</label>
-                    <input asp-for="Book.ListPrice" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.ListPrice" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.ListPrice" class="ms-0">List Price</label>
+                            <input asp-for="Book.ListPrice" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.ListPrice" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Price" class="ms-0">Price for 1-50</label>
-                    <input asp-for="Book.Price" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.Price" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.Price" class="ms-0">Price for 1-50</label>
+                            <input asp-for="Book.Price" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.Price" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Price50" class="ms-0">Price for 50-100</label>
-                    <input asp-for="Book.Price50" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.Price50" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.Price50" class="ms-0">Price for 50-100</label>
+                            <input asp-for="Book.Price50" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.Price50" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.Price100" class="ms-0">Price for 100+</label>
-                    <input asp-for="Book.Price100" class="form-control border-0 shadow" />
-                    <span asp-validation-for="Book.Price100" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.Price100" class="ms-0">Price for 100+</label>
+                            <input asp-for="Book.Price100" class="form-control border-0 shadow" />
+                            <span asp-validation-for="Book.Price100" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.CategoryId" class="ms-0"></label>
-                    <select asp-for="Book.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
-                        <option disabled selected>--Select category--</option>
-                    </select>
-                    <span asp-validation-for="Book.CategoryId" class="text-danger"></span>
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.CategoryId" class="ms-0"></label>
+                            <select asp-for="Book.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                                <option disabled selected>--Select category--</option>
+                            </select>
+                            <span asp-validation-for="Book.CategoryId" class="text-danger"></span>
+                        </div>
 
-                <div class="form-floating py-3 col-12">
-                    <label asp-for="Book.ImageUrl" class="ms-0"></label>
-                    <input type="file" class="form-control border-0 shadow" />
-                </div>
+                        <div class="form-floating py-3 col-12">
+                            <label asp-for="Book.ImageUrl" class="ms-0"></label>
+                            <input type="file" name="file" class="form-control border-0 shadow" />
+                        </div>
 
-                <div class="row pt-2">
-                    <div class="col-6 col-md-3">
-                        @if (Model.Book.Id != 0)
-                        {
-                            <button type="submit" class="btn btn-primary form-control">Update</button>
-                        }
-                        else
-                        {
-                            <button type="submit" class="btn btn-primary form-control">Create</button>
-                        }
-                        
+                        <div class="row pt-2">
+                            <div class="col-6 col-md-3">
+                                @if (Model.Book.Id != 0)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Update</button>
+                                }
+                                else
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Create</button>
+                                }
+
+                            </div>
+
+                            <div class="col-6 col-md-3">
+                                <a asp-controller="Book" asp-action="Index" class="btn btn-outline-primary border form-control">Back to List</a>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="col-6 col-md-3">
-                        <a asp-controller="Book" asp-action="Index" class="btn btn-outline-primary border form-control">Back to List</a>
-                    </div>
+                </div>
+
+                <div class="col-2">
+                    <img src="@Model.Book.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
                 </div>
             </div>
         </form>
@@ -101,6 +110,21 @@
 
 
 @section Scripts{
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'ai tinycomments mentions anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed permanentpen footnotes advtemplate advtable advcode editimage tableofcontents mergetags powerpaste tinymcespellchecker autocorrect a11ychecker typography inlinecss',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | align lineheight | tinycomments | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ],
+            ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant"))
+        });
+    </script>
+
     @{
         <partial name="_ValidationScriptsPartial" />
     }
