Populated all Book records their respective category name property based on the primary-foreign key relationship

--- a/Books.Web/Views/Shared/_Layout.cshtml
+++ b/Books.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/Books.Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+    <script src="https://cdn.tiny.cloud/1/wsbhbrw0fad245if5qb5cyc8oardo1rxz40r60np5dup07mq/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
     <header>
