--- a/Books.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -39,8 +39,8 @@
                         <td>@obj.Title</td>
                         <td>@obj.Author</td>
                         <td>@obj.ISBN</td>
-                        <td>@obj.ListPrice</td>
-                        <td></td>
+                        <td>@obj.Price</td>
+                        <td>@obj.Category.Name</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Book" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
