--- a/Books.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Books.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="column-12 text-center">
-                <h2 class="text-white py-2">Category List</h2>
+                <h2 class="text-white py-2">Book List</h2>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>Book Title</th>
@@ -29,32 +29,13 @@
                     <th>ISBN</th>
                     <th>Price</th>
                     <th>Category</th>
+                    <th></th>
                 </tr>
             </thead>
-
-            <tbody>
-                @foreach (var obj in Model /*.OrderBy(a => a.Title) /*.OrderBy(a => a.Name)*/)
-                {
-                    <tr>
-                        <td>@obj.Title</td>
-                        <td>@obj.Author</td>
-                        <td>@obj.ISBN</td>
-                        <td>@obj.Price</td>
-                        <td>@obj.Category.Name</td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Book" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-controller="Book" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
         </table>
     </div>
 </div>
 
+@section Scripts{
+    <script src="~/js/book.js"></script>
+}
