--- a/Books.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/Books.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                                 <p class="text-dark text-opacity-75 text-center"> As low as: <span>@book.Price100.ToString("c")</span> </p>
                             </div>
                             <div>
-                                <a href="" class="btn btn-primary bg-gradient border-0 form-control">Details</a>
+                                <a asp-action="Details" asp-route-bookId="@book.Id" class="btn btn-primary bg-gradient border-0 form-control">Details</a>
                             </div>
                         </div>
                     </div>
