--- a/Books.Web/Views/Shared/_Layout.cshtml
+++ b/Books.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link href="~/lib/datatables/css/datatables.bootstrap4.css" rel="stylesheet" />
     <link href="~/lib/datatables/css/datatables.bootstrap4.min.css" rel="stylesheet" />
-    <script src="https://cdn.tiny.cloud/1/wsbhbrw0fad245if5qb5cyc8oardo1rxz40r60np5dup07mq/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    @* <script src="https://cdn.tiny.cloud/wsbhbrw0fad245if5qb5cyc8oardo1rxz40r60np5dup07mq/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> *@
 </head>
 <body>
     <header>
