Assigned roles to users and implemented authorisation based on the user roles

--- a/Books.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Books.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Books.Web.Areas.Identity
+@using Books.Utility
+@using Books.Models
+@using Books.Models.ViewModels
 @using Books.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
