--- a/Books.Web/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Books.Web/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Books.Web
 @using Books.Models
 @using Books.Models.ViewModels
+@using Books.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
