Refactored Identity Rgister and Log in pages from the default styling

--- a/Books.Web/wwwroot/css/site.css
+++ b/Books.Web/wwwroot/css/site.css
@@ -537,3 +537,11 @@ bg-success {
         background-color: #578553;
         border-color: #578553;
     }
+.divider-text:before, .divider-text::after {
+    color: white;
+    content: "";
+    flex: 1;
+    border-bottom: 1px solid #555;
+    margin: auto 0.25rem;
+    box-shadow: 0 -2px;
+}
